<resources>
    <string name="app_name">Simferopol</string>

    <string name="menu_map">Map</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_monuments">Landmarks</string>
    <string name="menu_info_marks">Info marks</string>
    <string name="menu_services">Services</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_ar">AR</string>
    <string name="menu_settings">Settings</string>
    <string name="language">Language</string>
    <string name="audio_files">Download audio files</string>

    <string name="monuments">Monuments</string>
    <string name="history">History</string>

    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>

    <string name="send_statistic">Send statistics</string>
    <string name="developed_by">Developed by LLC \"Joy-Dev\"</string>
    <string name="about_app">About app</string>
    <string name="version">Version</string>
    <string name="build">build</string>
    <string name="distance_km">KM</string>
    <string name="distance_m">m</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>
    <string name="site">Website</string>
    <string name="worktime">Worktime</string>
    <string name="select_route">Select route</string>

    <string name="sceneform_android_version_error">Sceneform requires Android N or later</string>
    <string name="sceneform_opengl_version_error">Sceneform requires OpenGL ES 3.0 or later</string>
    <string name="image_database_error">Could not setup augmented image database</string>
    <string name="dismiss">Dismiss</string>
    <string name="model_3d">Model 3D</string>

    <plurals name="time_hours">
        <item quantity="one">%s hour</item>
        <item quantity="other">%s hours</item>
        <item quantity="few">%s hours</item>
        <item quantity="many">%s hours</item>
    </plurals>

    <string name="arcore_not_installed">Please install ARCore</string>
    <string name="arcore_not_updated">Please update ARCore</string>
    <string name="app_not_updated">Please update this app</string>
    <string name="arcore_not_supported">This device does not support AR</string>
    <string name="camera_and_location_permission_request">Location and Camera permissions are needed to use this feature</string>
    <string name="loading_message">Loading your current location…</string>
    <string name="ar_location">Find nearby</string>
    <string name="temperature">C</string>


</resources>
