<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"

        android:name="com.simferopol.app.ui.map.MapFragment"
        android:label="@string/menu_map"

        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_routes"

        android:name="com.simferopol.app.ui.routes.RoutesFragment"
        android:label="@string/menu_routes"

        tools:layout="@layout/fragment_routes">
        <action
            android:id="@+id/action_nav_routes_to_nav_route"
            app:destination="@+id/nav_route" />
    </fragment>

    <fragment
        android:id="@+id/nav_monuments"

        android:name="com.simferopol.app.ui.monuments.MonumentsFragment"
        android:label="@string/menu_monuments"

        tools:layout="@layout/fragment_monuments">
        <action
            android:id="@+id/action_nav_monuments_to_nav_monument"
            app:destination="@+id/nav_monument" />
    </fragment>

    <fragment
        android:id="@+id/nav_info_marks"

        android:name="com.simferopol.app.ui.infoMarks.InfoMarksFragment"
        android:label="@string/menu_info_marks"

        tools:layout="@layout/fragment_info_marks" />

    <fragment
        android:id="@+id/nav_services"

        android:name="com.simferopol.app.ui.services.ServiceFragment"
        android:label="@string/menu_services"

        tools:layout="@layout/fragment_service" />


    <fragment
        android:id="@+id/nav_history"

        android:name="com.simferopol.app.ui.history.HistoryFragment"
        android:label="@string/menu_history"

        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_about"

        android:name="com.simferopol.app.ui.about.AboutFragment"
        android:label="@string/menu_about"

        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_events"

        android:name="com.simferopol.app.ui.events.EventsFragment"
        android:label="@string/menu_events"

        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_settings"

        android:name="com.simferopol.app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"

        tools:layout="@layout/fragment_settings" />

    <fragment

        android:id="@+id/nav_route"
        android:name="com.simferopol.app.ui.routes.routeGeoObjects.RouteFragment"

        tools:layout="@layout/fragment_route">

        <argument
            android:name="route"
            app:argType="com.simferopol.api.models.Route" />

        <action
            android:id="@+id/action_nav_route_to_nav_route_map"
            app:destination="@+id/nav_route_map" />
    </fragment>

    <fragment

        android:id="@+id/nav_monument"
        android:name="com.simferopol.app.ui.monuments.MonumentFragment">

        <argument
            android:name="monument"
            app:argType="com.simferopol.api.models.GeoObject" />

    </fragment>

    <fragment

        android:id="@+id/nav_route_map"
        android:name="com.simferopol.app.ui.routes.RouteMapFragment"

        tools:layout="@layout/fragment_route_map" >

        <argument
            android:name="route"
            app:argType="com.simferopol.api.models.Route"
            />
    </fragment>

</navigation>