<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.simferopol.app.ui.services.vm.ServiceVm" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/serviceContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/previewImage"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadImage="@{vm.imageUrl}" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/transparent_img_bg"

                    app:layout_constraintBottom_toBottomOf="@id/previewImage"
                    app:layout_constraintEnd_toEndOf="@id/previewImage"
                    app:layout_constraintStart_toStartOf="@id/previewImage"
                    app:layout_constraintTop_toTopOf="@id/previewImage"

                    />

                <TextView
                    android:id="@+id/titleTv"
                    style="@style/Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{vm.name}"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.8"
                    tools:text="Золотая лихорадка в Енисейске" />

                <TextView
                    android:id="@+id/address"
                    style="@style/SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"

                    app:layout_constraintStart_toStartOf="@id/titleTv"
                    app:layout_constraintTop_toBottomOf="@id/titleTv" />

                <TextView
                    android:id="@+id/addressTv"
                    style="@style/RouteData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{vm.address}"


                    app:layout_constraintStart_toStartOf="@id/titleTv"

                    app:layout_constraintTop_toBottomOf="@id/address"
                    tools:text="Золотая лихорадка в Енисейске" />

                <ImageView
                    android:id="@+id/btn_location"

                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="16dp"
                    android:src="@mipmap/ic_location"
                    android:onClick="@{()->vm.onMapClick(header)}"

                    app:layout_constraintBottom_toBottomOf="@+id/titleTv"
                    app:layout_constraintStart_toEndOf="@+id/titleTv"
                    app:layout_constraintTop_toTopOf="@+id/titleTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_play_button"
                android:onClick="@{()->vm.onPlayClick()}"
                android:padding="10dp"
                android:src="@mipmap/ic_play"

                app:layout_constraintEnd_toEndOf="@id/serviceContainer"
                app:layout_constraintTop_toTopOf="@id/serviceContainer" />

            <TextView
                android:id="@+id/description"
                style="@style/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:text="@{vm.content}"

                app:layout_constraintTop_toBottomOf="@id/header"
                tools:text="Золотая лихорадка в Енисейске" />

            <View
                style="@style/Divider.Horizontal"
                android:alpha="0.5"
                android:background="@color/lightGray"
                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/site"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/site"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:textViewVisibility="@{vm.site}" />

            <TextView
                android:id="@+id/siteTv"
                style="@style/Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@{vm.site}"
                android:autoLink="web"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/site"
                app:textViewVisibility="@{vm.site}" />

            <TextView
                android:id="@+id/worktime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/worktime"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/siteTv"
                app:textViewVisibility="@{vm.worktime}" />

            <TextView
                android:id="@+id/worktimeTv"
                style="@style/Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@{vm.worktime}"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/worktime"
                app:textViewVisibility="@{vm.worktime}" />

            <TextView
                android:id="@+id/contacts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/contacts"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/worktimeTv"
                app:textViewVisibility="@{vm.contacts}" />

            <TextView
                android:id="@+id/contactsTv"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginBottom="32dp"
                android:text="@{vm.contacts}"
                android:autoLink="phone"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/contacts"
                app:textViewVisibility="@{vm.contacts}" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/photos_viewpager"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"

                app:layout_constraintEnd_toEndOf="@id/description"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@+id/contactsTv" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/pager_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                app:layout_constraintEnd_toEndOf="@id/photos_viewpager"
                app:layout_constraintStart_toStartOf="@id/photos_viewpager"
                app:layout_constraintTop_toBottomOf="@id/photos_viewpager"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>